--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
-    <nav class="nav d-flex justify-content-around">
+    <nav class="nav d-flex justify-content-around mt-2">
     <h1 class="text-center mb-5">Calculator</h1>
     <i class="bi bi-moon  dark-mode " onclick="dark()"></i>
 </nav>
